# lead-mql-scoring

./: License  README.md  pip install -e  score_leads.py
examples/: leads.csv
examples/📄 examples/: events.csv
src/lead_mql_scoring/: pyproject.toml
📄 sql/: bigquery.sql  postgres.sql
